traffic-shift/envoy/envoy-proxy.yaml
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8881
      
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
      filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          use_remote_address: true
          skip_xff_append: false
          stat_prefix: ingress_http
          ## Defaults to envoy
          server_name: "envoy"
          route_config:
            name: local_route
            virtual_hosts:
            - name: split_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                  runtime_fraction:
                    default_value:
                      numerator: 50
                      denominator: HUNDRED # Can only be HUNDRED, TEN_THOUSAND, or MILLION
                    runtime_key: routing.traffic_shift.split_service
                route:
                  cluster: web
              - match:
                  prefix: "/"
                route:
                  cluster: web2
          http_filters:
            - name: envoy.router
  clusters:
  - name: web
    connect_timeout: 5s
    type: LOGICAL_DNS
    hosts: [{ socket_address: { address: web, port_value: 80 }}]
  - name: web2
    connect_timeout: 5s
    type: LOGICAL_DNS
    hosts: [{ socket_address: { address: web2, port_value: 80 }}]
